# dataset_Awesome

./: .gitignore  pyproject.toml
scripts/: getTopLevelAwesomeList.bash
src/: db.py  extractLinks.py
