[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<4.0"
bs4 = "^0.0.2"
progress = "^1.6"
click = "^8.1.7"
pyfs = {git = "https://github.com/NicholasSynovic/python-fs-utils"}
lxml = "^5.2.2"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
